fix jumping width

--- a/source/styles/blocks/page.scss
+++ b/source/styles/blocks/page.scss
@@ -18,6 +18,10 @@
   align-items: center;
 }
 
+.page__main {
+  width: 100%;
+}
+
 .page__title {
   margin-top: 0;
   margin-bottom: 1.2rem;
